[build-system]
requires = ["cython", "numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flood_app"
description = "A RESTful interface to run Landlab overland flow component."
authors = [
  {email = "gantian127@gmail.com"},
  {name = "CSDMS"}
]
maintainers = [
  {email = "gantian127@gmail.com"},
  {name = "CSDMS"}
]
keywords = [
  "landlab",
  "component modeling",
  "earth science",
  "model coupling",
  "numerical modeling",
]
license = {file = "LICENSE.rst"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",  
]
requires-python = ">=3.8"
dependencies = [
    "cherrypy",
    "click",
    "flask",
    "flask-cors",
    "landlab >= 2",
    "rasterio",
    "tqdm",
]
dynamic = ["readme", "version"]

[project.urls]
documentation = "https://github.com/gantian127/flood_app#readme"
repository = "https://github.com/gantian127/flood_app"
#changelog = "https://github.com/gantian127/flood_app/blob/develop/CHANGES.rst"

[project.optional-dependencies]
dev = [
  "black",
  "coveralls",
  "flake8",
  "flake8-bugbear",
  "isort",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "towncrier",
  "zest.releaser[recommended]",
]

[project.scripts]
start-app = "flood_app.cli:main"

[tool.setuptools]
packages = ["flood_app"]

# need to add this line to include templates files
[tool.setuptools.package-data]
"flood_app" = ["templates/*", "static/*"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
version = {attr = "flood_app._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["flood_app", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist", "examples"]
addopts = """
  --ignore setup.py
  --tb native
  --strict
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

#[tool.towncrier]
#directory = "news"
#package = "flood_app"
#filename = "CHANGES.rst"
#single_file = true
#underlines = "-`^"
#issue_format = "`#{issue} <https://github.com/gantian127/flood_app/issues/{issue}>`_"
#title_format = "{version} ({project_date})"

#[[tool.towncrier.type]]
#directory = "feature"
#name = "New Features"
#showcontent = true
#
#[[tool.towncrier.type]]
#directory = "bugfix"
#name = "Bug Fixes"
#showcontent = true
#
#[[tool.towncrier.type]]
#directory = "docs"
#name = "Documentation Enhancements"
#showcontent = true
#
#[[tool.towncrier.type]]
#directory = "misc"
#name = "Other Changes and Additions"
#showcontent = true
